--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,12 @@
+body {
+    margin: 0;
+}
 .header {
 	height: 150px;
-    border-top: 2px yellow solid;
+    border-top: 5px yellow solid;
 }
 .logo {
-	width: 12%;
+	width: 10%;
     padding: 10px;
     margin-left: 20px;
 	float: left;
@@ -22,3 +25,75 @@
 	margin-top: 40px;
     width: 100%;
 }
+
+.topnav {
+    overflow: hidden;
+    background-color: #6183A6;
+  }
+
+  .topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .active {
+    background-color: #04AA6D;
+    color: white;
+  }
+  
+  .topnav .icon {
+    display: none;
+  }
+  
+  .dropdown {
+    float: left;
+    overflow: hidden;
+  }
+  
+  .dropdown .dropbtn {
+    font-size: 17px;    
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .topnav a:hover, .dropdown .dropbtn:hover {
+    background-color: #838383;
+    color: white;
+  }
+  
+  .dropdown-content a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
